# fletcher-opae

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Dockerfile  Dockerfile.runtime  README.md  dev-env-setup.html  host-system-setup.html  index.html  introduction.html  primmap-example.html  primmap-prepare.html  primmap-use.html  print.html  searchindex.js  searchindex.json  setup.html  sum-example.html  sum-hardware.html  sum-prepare.html  sum-simulate.html
.github/workflows/: assets.yml  book.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  dev-env-setup.md  host-system-setup.md  introduction.md  primmap-example.md  primmap-prepare.md  primmap-use.md  setup.md  sum-example.md  sum-hardware.md  sum-prepare.md  sum-simulate.md
examples/hello_fletcher/hw/: hello_fletcher.json  opae.mmio.yml  sources.txt
examples/hello_fletcher/hw/src/: AxiTop.vhd  mmio.gen.vhd  mmio_pkg.gen.vhd  ofs_plat_afu.sv
examples/hello_fletcher/sw/src/: hello_fletcher.cpp
examples/sum/: .gitignore
hardware/opae/: README.md
hardware/sv/: ofs_plat_afu.sv
hardware/vhdl/: OpaeAxiTop.vhd
src/: fletcher_opae.c  fletcher_opae.h
